# room-localization

./: .gitignore
src/aruco_localizer/: package.xml  setup.cfg  setup.py
src/aruco_localizer/aruco_localizer/: localization_node.py  mavsdk_bridge.py  stream_to_ros.py  tag_map.json  transforms.py  utils.py
src/aruco_localizer/launch/: full_localization.launch.py
src/aruco_localizer/scripts/: offboard_controller.py
