<?xml version="1.0"?>
<package format="3">
  <name>aruco_localizer</name>
  <version>0.0.1</version>
  <description>ArUco-based localization system with MAVSDK integration and RTSP streaming support.</description>

  <maintainer email="zac.chew.l@gmail.com">Zachary</maintainer>
  <license>MIT</license>

  <!-- Required to build Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <!-- Optional for launch files and visualization -->
  <!-- <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend> -->

  <!-- Export the build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
